--- a/products.html
+++ b/products.html
@@ -29,8 +29,26 @@
                       <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                       </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Account</a>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Account
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <li>
+                            <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+                            <div class="col-sm-10">
+                              <input type="email" class="form-control" id="inputEmail3">
+                            </div>
+                          </li>
+                          <li>
+                            <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+                            <div class="col-sm-10">
+                              <input type="password" class="form-control" id="inputPassword3">
+                            </div>
+                          </li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li><button type="submit" class="btn btn-primary">Sign in</button></li>
+                        </ul>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#">Cart</a>
@@ -46,37 +64,62 @@
 
         <!--Products Nav Bar-->
         <div class="row">
-            <div class="col-1-5">
-                <div class="list-group">
-                    <a class="list-group-item list-group-item-action" id="top">
-                    Categories
-                    </a>
-                    <a href="kits.html" class="list-group-item list-group-item-action">Robot Kits</a>
-                    <a href="parts.html" class="list-group-item list-group-item-action">Robot Parts</a>
-                    <a href="tools.html" class="list-group-item list-group-item-action">Robot Tools</a>
-                    <a href="education.html" class="list-group-item list-group-item-action">Robotic Education</a>
-                    <a href="toys.html" class="list-group-item list-group-item-action">Toys</a>
-                </div>
+          <div class="col-1-5">
+            <div class="list-group">
+                <a class="list-group-item list-group-item-action" id="top">
+                Categories
+                </a>
+                <a href="kits.html" class="list-group-item list-group-item-action">Robot Kits</a>
+                <a href="parts.html" class="list-group-item list-group-item-action">Robot Parts</a>
+                <a href="tools.html" class="list-group-item list-group-item-action">Robot Tools</a>
+                <a href="education.html" class="list-group-item list-group-item-action">Robotic Education</a>
+                <a href="toys.html" class="list-group-item list-group-item-action">Toys</a>
             </div>
+          </div>
             
             <div class="col-4-5">
-                <ul class="nav">
-                    <li>
-                      <a class="nav-link active" id="product" href="kits.html">Kits</a>
-                    </li>
-                    <li>
-                      <a class="nav-link" id="product" href="parts.html">Parts</a>
-                    </li>
-                    <li>
-                      <a class="nav-link" id="product" href="tools.html">Tools</a>
-                    </li>
-                    <li>
-                        <a class="nav-link" id="product" href="education.html">Education</a>
-                    </li>
-                    <li>
-                        <a class="nav-link" id="product" href="toys.html">Toys</a>
-                    </li>
-                </ul>
+              <div class="row row-cols-1 row-cols-md-3 g-4" id="categories">
+                <div class="col">
+                  <div class="card">
+                    <a href="kits.html"><img src="Images/robot_kit.jpg" width="273px" height="240px"class="card-img-top" alt="Kits pic"></a>
+                    <div class="card-body">
+                      <h5 class="card-title">Kits</h5>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <a href="parts.html"><img src="Images/pixy2-imageSensor.jpg" width="273px" height="240px"class="card-img-top" alt="Kits pic"></a>
+                    <div class="card-body">
+                      <h5 class="card-title">Parts</h5>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <a href="tools.html"><img src="Images/plug_adapter.jpg" width="273px" height="240px"class="card-img-top" alt="Kits pic"></a>
+                    <div class="card-body">
+                      <h5 class="card-title">Tools</h5>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <a href="education.html"><img src="Images/robotics-books.jpeg" width="273px" height="240px"class="card-img-top" alt="Kits pic"></a>
+                    <div class="card-body">
+                      <h5 class="card-title">Education</h5>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <a href="toys.html"><img src="Images/megabot_toy.jpg" width="273px" height="240px"class="card-img-top" alt="Kits pic"></a>
+                    <div class="card-body">
+                      <h5 class="card-title">Toys</h5>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
         </div>
 
