--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,26 @@
                       <li class="nav-item">
                         <a class="nav-link" href="contact.html" id="contact">Contact</a>
                       </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Account</a>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Account
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <li>
+                            <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+                            <div class="col-sm-10">
+                              <input type="email" class="form-control" id="inputEmail3">
+                            </div>
+                          </li>
+                          <li>
+                            <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+                            <div class="col-sm-10">
+                              <input type="password" class="form-control" id="inputPassword3">
+                            </div>
+                          </li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li><button type="submit" class="btn btn-primary">Sign in</button></li>
+                        </ul>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#">Cart</a>
